--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ allprojects {
 }
 
 subprojects {
+  apply from: "$rootDir/dependencies.gradle"
+  apply from: "$rootDir/spotless.gradle"
+
   tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach { compile ->
     kotlinOptions {
       freeCompilerArgs += "-Xskip-prerelease-check"
