--- a/spotless.gradle
+++ b/spotless.gradle
@@ -3,7 +3,7 @@ apply from: '../dependencies.gradle'
 spotless {
   kotlin {
     target "**/*.kt"
-    ktlint("$versions.ktlintGradle").userData(['indent_size': '2', 'continuation_indent_size': '2'])
+    ktlint().userData(['indent_size': '2', 'continuation_indent_size': '2'])
     licenseHeaderFile '../spotless.license.kt'
     trimTrailingWhitespace()
     endWithNewline()
