--- a/fresco/src/androidTest/AndroidManifest.xml
+++ b/fresco/src/androidTest/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.skydoves.landscapist.fresco"
-  xmlns:tools="http://schemas.android.com/tools">
+  xmlns:tools="http://schemas.android.com/tools"
+  package="com.skydoves.landscapist.fresco">
 
   <uses-sdk android:targetSdkVersion="31" />
 
-  <uses-permission android:name="androide.permission.INTERNET" />
+  <uses-permission android:name="android.permission.INTERNET" />
 
   <application android:name=".FrescoTestApplication">
     <activity
