--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,11 +12,10 @@ ext.versions = [
 
     // di
     hiltCoreVersion  : '2.40.5',
-    hiltVersion      : '1.0.0',
 
     kotlin           : '1.6.10',
     coreKtxVersion   : '1.5.0-beta01',
-    composeVersion   : '1.1.0-rc03',
+    composeVersion   : '1.1.0',
     constraintVersion: '1.0.0-alpha07',
     activityVersion  : '1.3.0-alpha08',
     coroutinesVersion: '1.5.0',
