--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -16,10 +16,7 @@ ext.versions = [
     kotlin           : '1.6.10',
     coreKtxVersion   : '1.5.0-beta01',
     composeVersion   : '1.1.0',
-    constraintVersion: '1.0.0-alpha07',
-    activityVersion  : '1.3.0-alpha08',
-    coroutinesVersion: '1.5.0',
-    multidex         : '2.0.1',
+    coroutinesVersion: '1.6.0',
 
     frescoVersion    : '2.6.0',
     glideVersion     : '4.13.0',
@@ -33,5 +30,8 @@ ext.versions = [
     androidxTestJunit: '1.1.3',
 
     // for demo
-    materialVersion  : '1.3.0-beta01'
+    constraintVersion: '1.0.0-alpha07',
+    activityVersion  : '1.3.0-alpha08',
+    multidex         : '2.0.1',
+    materialVersion  : '1.5.0',
 ]
